--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "vuepress-quick-start",
   "version": "1.0.0",
-  "description": "vuepress-quick-start",
-  "main": "index.js",
-  "author": "Guany",
+  "description": "VuePress 快速上手",
   "license": "MIT",
+  "author": "Guany",
+  "main": "index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "@vuepress/plugin-back-to-top": "^1.9.7",
-    "@vuepress/plugin-medium-zoom": "^1.9.7",
     "vuepress": "^1.9.7"
   }
 }
