--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vuepress-quick-start",
   "version": "1.0.0",
-  "description": "VuePress 快速上手",
+  "private": true,
+  "description": "🚀 VuePress 快速上手",
   "license": "MIT",
   "author": "Guany",
   "scripts": {
