--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "author": "Guany",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "docs:format": "prettier --write ."
   },
   "devDependencies": {
+    "prettier": "^2.6.2",
     "vuepress": "^1.9.7"
   }
 }
