--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
+[build.environment]
+NPM_FLAGS = "--version"
+
 [build]
 publish = "docs/.vuepress/dist"
-command = "vuepress build docs"
+command = "npx pnpm install --store=node_modules/.pnpm-store && npx pnpm run docs:build"
