--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
-[build.environment]
-NPM_FLAGS = "--version"
-
 [build]
 publish = "docs/.vuepress/dist"
 command = "npx pnpm install --store=node_modules/.pnpm-store && npx pnpm run docs:build"
+
+[build.environment]
+NODE_VERSION = "16"
+NPM_FLAGS = "--version"
