--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "docs:format": "prettier --write ."
   },
   "devDependencies": {
+    "@types/node": "^18.6.2",
     "prettier": "^2.7.1",
     "vuepress": "^1.9.7"
   }
